namespace Core.Animations
{
    public enum EpsilonAnimationType
    {
        Greeting = 0,
        NodHead = 1,
        ShakeHead = 2,
        Perplexity = 3,
        Frown = 4,
        Upset = 5,
        Embarrassment = 6,
        Upset2 = 7,
        Wink = 8,
        Perplexity2 = 9,
        ToBeEmbarrassedAndShakeHead = 10,
        GetAngry = 11,
        Cringe = 12,
        Shake = 13,
    }
}